fix(segment): add overflow and use color ripple

--- a/core/src/components/segment-button/segment-button.scss
+++ b/core/src/components/segment-button/segment-button.scss
@@ -59,6 +59,8 @@
 
   white-space: nowrap;
   font-kerning: none;
+
+  overflow: hidden;
 }
 
 :host(:first-of-type) {
