--- a/core/src/components/segment/segment.md.scss
+++ b/core/src/components/segment/segment.md.scss
@@ -14,6 +14,7 @@
 :host(.ion-color)::slotted(ion-segment-button) {
   --background-hover: #{current-color(base, .04)};
   --background-activated: #{current-color(base, .16)};
+  --ripple-color: #{current-color(base)};
 }
 
 :host(.ion-color)::slotted(.segment-button-checked) {
